Composer: Incorrect wrap in citation with a long link
evolution-3.38.4-1.fc33.x86_64
webkit2gtk3-2.30.5-1.fc33.x86_64
Steps to reproduce:
-
Edit > Preferences > Mail Preferences > HTML Messages > Plain Text Mode > Show suppressed HTML parts as attachments
is enabled -
Edit > Preferences > Mail Preferences > HTML Messages > Plain Text Mode > HTML Mode
is set toShow HTML if present
-
Edit > Preferences > Composer Preferences > General > Default Behavior > Format messages in HTML
is disabled - Import testcase: evotest.mbox
- Open testcase message.
- Reply to message in plain text composer.
- Set mouse cursor at the beginning of the line
> > https://fgwoqj.example12.org/wiki/asdf:dfjljkdf/sdjflksdfjk_dfjkfa_dfjkdjfksd_dfjkfsa_dhrg
- Press Shift key and keep it pressed
- Set mouse cursor at the beginning of the second line
> On Wed, Feb 24, 2021 at 8:03 AM Andre Klapper
- Press Backspace key
- See that there is an empty second line (
> >
; not very expected but I can live with that) - Press Backspace key again
Expected outcome:
Deleting that empty line.
Actual outcome:
Quotation level of line with link is duplicated, now showing > > > > https://fgwoqj.example12.org/wiki/asdf:dfjljkdf/sdjflksdfjk_dfjkfa_dfjkdjfksd_dfjkfsa_dhrg
Edited by Milan Crha