I#1394 - Composer: Incorrect wrap in citation with a long link

Closes https://gitlab.gnome.org/GNOME/evolution/-/issues/1394